--- a/dbaccess/util/dba.component
+++ b/dbaccess/util/dba.component
@@ -22,7 +22,8 @@
   <implementation name="com.sun.star.comp.dbaccess.DatabaseDataProvider">
     <service name="com.sun.star.chart2.data.DatabaseDataProvider"/>
   </implementation>
-  <implementation name="com.sun.star.comp.dba.DataAccessDescriptorFactory">
+  <implementation name="com.sun.star.comp.dba.DataAccessDescriptorFactory"
+      constructor="com_sun_star_comp_dba_DataAccessDescriptorFactory">
     <singleton name="com.sun.star.sdb.DataAccessDescriptorFactory"/>
   </implementation>
   <implementation name="com.sun.star.comp.dba.OCommandDefinition"
