tdf#93837 Add helper code to load popup menus from xml
Using internally MenuBarManager to manage this kind of menus.
Implemented as a popup menu controller to be able to use in
menubar/toolbar, not only as a context menu.

Change-Id: I46719d66c569db83edd04faf977e0b2b3df0c5fa

--- a/framework/util/fwk.component
+++ b/framework/util/fwk.component
@@ -212,4 +212,8 @@
       constructor="com_sun_star_comp_framework_ToolbarAsMenuController_get_implementation">
     <service name="com.sun.star.frame.PopupMenuController"/>
   </implementation>
+  <implementation name="com.sun.star.comp.framework.ResourceMenuController"
+      constructor="com_sun_star_comp_framework_ResourceMenuController_get_implementation">
+    <service name="com.sun.star.frame.PopupMenuController"/>
+  </implementation>
 </component>
