--- a/lotuswordpro/util/lwpfilter.component
+++ b/lotuswordpro/util/lwpfilter.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
-    prefix="lotuswordpro" xmlns="http://openoffice.org/2010/uno-components">
+    xmlns="http://openoffice.org/2010/uno-components">
   <implementation name="com.sun.star.comp.Writer.LotusWordProImportFilter"
       constructor="LotusWordProImportFilter_get_implementation">
     <service name="com.sun.star.document.ImportFilter"/>
