tdf#70998 Termchange: Graphic/Picture->Image
Changed visible terms as required.

Change-Id: Id4335629977aa8512c753241d7c2203820716b73
Reviewed-on: https://gerrit.libreoffice.org/21857
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/sw/uiconfig/swriter/ui/printoptionspage.ui
+++ b/sw/uiconfig/swriter/ui/printoptionspage.ui
@@ -34,7 +34,7 @@
                     <property name="row_spacing">6</property>
                     <child>
                       <object class="GtkCheckButton" id="graphics">
-                        <property name="label" translatable="yes">_Pictures and objects</property>
+                        <property name="label" translatable="yes">_Images and objects</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
