tdf#74608 comphelper: Constructor feature for IndexedPropertyValuesContainer
Change-Id: I0e9ea9e4c750918b33040dad2279fe55facd4cab
Reviewed-on: https://gerrit.libreoffice.org/21858
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Matúš Kukan <matus@libreoffice.org>

--- a/comphelper/util/comphelp.component
+++ b/comphelper/util/comphelp.component
@@ -22,7 +22,8 @@
   <implementation name="AnyCompareFactory">
     <service name="com.sun.star.ucb.AnyCompareFactory"/>
   </implementation>
-  <implementation name="IndexedPropertyValuesContainer">
+  <implementation name="IndexedPropertyValuesContainer"
+      constructor="IndexedPropertyValuesContainer_get_implementation">
     <service name="com.sun.star.document.IndexedPropertyValues"/>
   </implementation>
   <implementation name="NamedPropertyValuesContainer">
