--- a/svtools/uiconfig/ui/restartdialog.ui
+++ b/svtools/uiconfig/ui/restartdialog.ui
@@ -110,7 +110,7 @@
                 <property name="can_focus">False</property>
                 <property name="no_show_all">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">For the mail merge to work properly, %PRODUCTNAME must be restarted.</property>
+                <property name="label" translatable="yes">For mail merge to work properly, %PRODUCTNAME must be restarted.</property>
                 <property name="wrap">True</property>
                 <property name="max_width_chars">50</property>
               </object>
