tdf#74608 comphelper: Constructor feature for NamedPropertyValuesContainer
Change-Id: I63390eca5c887bfd84846655cef6339ba9785e24
Reviewed-on: https://gerrit.libreoffice.org/21888
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Matúš Kukan <matus@libreoffice.org>

--- a/comphelper/util/comphelp.component
+++ b/comphelper/util/comphelp.component
@@ -26,7 +26,8 @@
       constructor="IndexedPropertyValuesContainer_get_implementation">
     <service name="com.sun.star.document.IndexedPropertyValues"/>
   </implementation>
-  <implementation name="NamedPropertyValuesContainer">
+  <implementation name="NamedPropertyValuesContainer"
+      constructor="NamedPropertyValuesContainer_get_implementation">
     <service name="com.sun.star.document.NamedPropertyValues"/>
   </implementation>
   <implementation name="com.sun.star.comp.MemoryStream">
