tdf#96327: Fix accelerator for remote files
Change the accelerator from F to S, because it was conflicting with
file menu.

Change-Id: I1f3959ae12b09fb5d48a7379693c6afc1bafa906
Reviewed-on: https://gerrit.libreoffice.org/21898
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>

--- a/sfx2/uiconfig/ui/startcenter.ui
+++ b/sfx2/uiconfig/ui/startcenter.ui
@@ -142,7 +142,7 @@
                 </child>
                 <child>
                   <object class="GtkButton" id="open_remote">
-                    <property name="label" translatable="yes">Remote _Files</property>
+                    <property name="label" translatable="yes">Remote File_s</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
