tdf#97425 - JVM start parameters should be editable.
Bug Resolved.

Change-Id: I8bd5ee684a03f8e24f0b74d63ea98923945b0870
Reviewed-on: https://gerrit.libreoffice.org/21912
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>

--- a/cui/uiconfig/ui/javastartparametersdialog.ui
+++ b/cui/uiconfig/ui/javastartparametersdialog.ui
@@ -191,6 +191,20 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkButton" id="editbtn">
+                    <property name="label" translatable="yes">_Edit</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="valign">start</property>
+                    <property name="use_underline">True</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">2</property>
+                  </packing>
+                </child>
+                <child>
                   <placeholder/>
                 </child>
                 <child>
