tdf#74608 comphelper: Constructor feature for AnyCompareFactory
Change-Id: If5d35828a7309b6916de65282e32ce1ad459a15f
Reviewed-on: https://gerrit.libreoffice.org/21936
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/comphelper/util/comphelp.component
+++ b/comphelper/util/comphelp.component
@@ -19,7 +19,8 @@
 
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
     prefix="comphelp" xmlns="http://openoffice.org/2010/uno-components">
-  <implementation name="AnyCompareFactory">
+  <implementation name="AnyCompareFactory"
+      constructor="AnyCompareFactory_get_implementation">
     <service name="com.sun.star.ucb.AnyCompareFactory"/>
   </implementation>
   <implementation name="IndexedPropertyValuesContainer"
