--- a/sd/uiconfig/simpress/ui/slidetransitionspanel.ui
+++ b/sd/uiconfig/simpress/ui/slidetransitionspanel.ui
@@ -138,7 +138,7 @@
                       <object class="GtkLabel" id="variant_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Variant</property>
+                        <property name="label" translatable="yes">Variant:</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
