tdf#74608: Ctor function for mork component implementation
Change-Id: I706e65777c3f7ec1af255d93ffa31925e75fb2b7
Reviewed-on: https://gerrit.libreoffice.org/22123
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/connectivity/source/drivers/mork/mork.component
+++ b/connectivity/source/drivers/mork/mork.component
@@ -9,8 +9,9 @@
 -->
 
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
-    prefix="mork" xmlns="http://openoffice.org/2010/uno-components">
-  <implementation name="com.sun.star.comp.sdbc.MorkDriver">
+    xmlns="http://openoffice.org/2010/uno-components">
+  <implementation name="com.sun.star.comp.sdbc.MorkDriver"
+      constructor="com_sun_star_comp_sdbc_MorkDriver_get_implementation">
     <service name="com.sun.star.sdbc.Driver"/>
   </implementation>
 </component>
