--- a/i18npool/source/search/i18nsearch.component
+++ b/i18npool/source/search/i18nsearch.component
@@ -21,5 +21,6 @@
     prefix="i18nsearch" xmlns="http://openoffice.org/2010/uno-components">
   <implementation name="com.sun.star.util.TextSearch_i18n">
     <service name="com.sun.star.util.TextSearch"/>
+    <service name="com.sun.star.util.TextSearch2"/>
   </implementation>
 </component>
