wpftwriter: use service constructor
Change-Id: I217988ca09b40af7cb2b3b28ea7c2af6a9db12d0

--- a/writerperfect/source/writer/wpftwriter.component
+++ b/writerperfect/source/writer/wpftwriter.component
@@ -17,28 +17,34 @@
  *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
 -->
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
-    prefix="wpftwriter" xmlns="http://openoffice.org/2010/uno-components">
-  <implementation name="com.sun.star.comp.Writer.AbiWordImportFilter">
+    xmlns="http://openoffice.org/2010/uno-components">
+  <implementation name="com.sun.star.comp.Writer.AbiWordImportFilter"
+      constructor="com_sun_star_comp_Writer_AbiWordImportFilter_get_implementation">
     <service name="com.sun.star.document.ImportFilter"/>
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
   </implementation>
-  <implementation name="com.sun.star.comp.Writer.MSWorksImportFilter">
+  <implementation name="com.sun.star.comp.Writer.MSWorksImportFilter"
+      constructor="com_sun_star_comp_Writer_MSWorksImportFilter_get_implementation">
     <service name="com.sun.star.document.ImportFilter"/>
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
   </implementation>
-  <implementation name="com.sun.star.comp.Writer.MWAWImportFilter">
+  <implementation name="com.sun.star.comp.Writer.MWAWImportFilter"
+      constructor="com_sun_star_comp_Writer_MWAWImportFilter_get_implementation">
     <service name="com.sun.star.document.ImportFilter"/>
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
   </implementation>
-  <implementation name="com.sun.star.comp.Writer.WordPerfectImportFilter">
+  <implementation name="com.sun.star.comp.Writer.WordPerfectImportFilter"
+      constructor="com_sun_star_comp_Writer_WordPerfectImportFilter_get_implementation">
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
     <service name="com.sun.star.document.ImportFilter"/>
   </implementation>
-  <implementation name="org.libreoffice.comp.Writer.EBookImportFilter">
+  <implementation name="org.libreoffice.comp.Writer.EBookImportFilter"
+      constructor="org_libreoffice_comp_Writer_EBookImportFilter_get_implementation">
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
     <service name="com.sun.star.document.ImportFilter"/>
   </implementation>
-  <implementation name="org.libreoffice.comp.Writer.PagesImportFilter">
+  <implementation name="org.libreoffice.comp.Writer.PagesImportFilter"
+      constructor="org_libreoffice_comp_Writer_PagesImportFilter_get_implementation">
     <service name="com.sun.star.document.ExtendedTypeDetection"/>
     <service name="com.sun.star.document.ImportFilter"/>
   </implementation>
