--- a/writerperfect/source/draw/wpftdraw.component
+++ b/writerperfect/source/draw/wpftdraw.component
@@ -8,7 +8,7 @@
  *
 -->
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
-    prefix="wpftdraw" xmlns="http://openoffice.org/2010/uno-components">
+    xmlns="http://openoffice.org/2010/uno-components">
   <implementation name="com.sun.star.comp.Draw.CDRImportFilter"
       constructor="com_sun_star_comp_Draw_CDRImportFilter_get_implementation">
     <service name="com.sun.star.document.ImportFilter"/>
