--- a/cui/uiconfig/ui/distributionpage.ui
+++ b/cui/uiconfig/ui/distributionpage.ui
@@ -144,7 +144,7 @@
                         <property name="can_focus">False</property>
                         <property name="halign">center</property>
                         <property name="valign">center</property>
-                        <property name="pixbuf">svx/res/dsth_cen.png</property>
+                        <property name="pixbuf">svx/res/dsth_dst.png</property>
                       </object>
                       <packing>
                         <property name="left_attach">3</property>
